radix-engine-tests/tests/dec_macros/src/dec_err_overflow_1.stderr
error: The number is too large to fit in a decimal.
 --> src/dec_err_overflow_1.rs:4:30
  |
4 |     const X: Decimal = dec!(-3138550867693340381917894711603833208051.177722232017256449);
  |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
